# hansard-ahli-proc

fix_21_March_25/: author_2025_03_05.csv  author_2025_03_05.parquet  author_2025_03_21.csv  author_2025_03_21.parquet  author_history_2025_03_05.csv  author_history_2025_03_05.parquet  author_history_2025_03_21.csv  author_history_2025_03_21.parquet  author_history_with_term_2025-03-21.csv  fix.ipynb  main.py  pyproject.toml
mess/: DN - dn_w_author_id.csv  DR - DR 1 - 11 ID.csv  DR - DR 1 - 11 no ID.csv  DR - DR 1-11.csv  DR - DR 12-12 with ID.csv  DR - DR 12-15 with new ID.csv  DR - dr_1_11_id_all.csv  DR.csv  DR_1214_spr.csv  DR_1214_spr_id.csv  DR_15_spr.csv  DR_15_spr_id.csv  _dr.csv  age_fix.csv  author.csv  author_history.csv  author_history_with_term.csv  author_history_with_term.parquet  author_with_term.csv  author_with_term.parquet  authors.parquet  build-seed.ipynb  candidates_master.csv  cleaned_maklumat.parquet  cleaned_maklumat_new.csv  cleaned_maklumat_new.parquet  dn_scrapper.ipynb  dr1_11_wiki.csv  dr1_11_wiki_min.csv  dr_1215_new_id.csv  dr_1215_new_id2.csv  dr_15.parquet  dr_1_11_id.csv  dr_1_11_merged.csv  id.py  identify.ipynb  master_table.csv  merge.ipynb  merge_id.ipynb  pyproject.toml  (+7 more)
mess/clean-2025-03-05/: author_history_2025_03_05.csv  author_history_with_term - author_history_with_term.csv  fix.ipynb
